[tool.poetry]
name = "get-flakes"
version = "0.0.10"
license = "Apache-2.0"
homepage = "https://github.com/treebeardtech/get-flakes"
description = "get-flakes"
authors = ["alex-treebeard <alex@treebeard.io>"]
packages = [
  {include = "get_flakes", from = "src"},
]

[tool.poetry.scripts]
get-flakes = 'get_flakes.cli:run'

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
rich = "^9.13.0"
pydantic = "^1.8.1"
requests = "^2.25.1"
Jinja2 = "3.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
twine = "^3.3.0"
pytest-cov = "^2.11.1"
snapshottest = "^0.6.0"
pytest-xdist = "^2.2.1"
pytest-randomly = "^3.5.0"
pytest-env = "^0.6.2"
python-dotenv = "^0.17.1"
pytest-sugar = "^0.9.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
