[tool.poetry]
name = "get-flakes"
version = "0.0.10"
license = "Apache-2.0"
homepage = "https://github.com/treebeardtech/get-flakes"
description = "get-flakes"
authors = ["alex-treebeard <alex@treebeard.io>"]
packages = [
  {include = "get-flakes", from = "src"},
]

[tool.poetry.scripts]
get-flakes = 'get-flakes.cli:run'

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
rich = "^9.13.0"
pydantic = "^1.8.1"
coverage = "^5.5"
junitparser = "^2.0.0"
timeago = "^1.0.15"
SQLAlchemy = "^1.4.17"
sqlalchemy-cockroachdb = "^1.3.3"
psycopg2-binary = "^2.8.6"
fastapi = {extras = ["all"], version = "^0.65.1"}
requests = "^2.25.1"
python-multipart = "^0.0.5"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
twine = "^3.3.0"
pytest-cov = "^2.11.1"
snapshottest = "^0.6.0"
pytest-xdist = "^2.2.1"
pytest-randomly = "^3.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
  "--ignore=tests/resources",
  "--strict-markers",
  "--capture=tee-sys",
  "--forked",
  "-p","no:get-flakes"
]

[tool.poetry.plugins."pytest11"]
get-flakes = "get-flakes.pytest_plugin"